@@ -567,6 +567,7 @@ Prefix::reduce_N___()
 
 Token result = si.eval_(at0());
    move_1(at0(), result, LOC);
+   at0().SET_temp();
    set_action(at0());
 }
 //-----------------------------------------------------------------------------
@@ -576,6 +577,7 @@ Prefix::reduce_MISC_F_B_()
    Assert1(prefix_len == 2);
 
    pop_args_push_result(si.eval_B(at0(), at1()));
+   at0().SET_temp();
    set_action(at0());
 }
 //-----------------------------------------------------------------------------
@@ -588,6 +590,7 @@ Prefix::reduce_MISC_F_C_B()
    if (!at1().get_apl_val())              SYNTAX_ERROR;
 
    pop_args_push_result(si.eval_XB(at0(), at1(), at2()));
+   at0().SET_temp();
    set_action(at0());
 }
 //-----------------------------------------------------------------------------
@@ -597,6 +600,7 @@ Prefix::reduce_A_F_B_()
    Assert1(prefix_len == 3);
 
    pop_args_push_result(si.eval_AB(at0(), at1(), at2()));
+   at0().SET_temp();
    set_action(at0());
 }
 //-----------------------------------------------------------------------------
@@ -617,6 +621,7 @@ Prefix::reduce_A_F_C_B()
    if (!at2().get_apl_val())              SYNTAX_ERROR;
 
    pop_args_push_result(si.eval_AXB(at0(), at1(), at2(), at3()));
+   at0().SET_temp();
    set_action(at0());
 }
 //-----------------------------------------------------------------------------
@@ -711,6 +716,7 @@ Value_P Z = A->index(at1());
 Token result = Token(TOK_APL_VALUE1, Z);
    pop_args_push_result(result);
 
+   at0().SET_temp();
    set_action(result);
 }
 //-----------------------------------------------------------------------------
@@ -912,6 +918,7 @@ Token result;
    Value::glue(result, at0(), at1(), LOC);
    pop_args_push_result(result);
 
+   at0().SET_temp();
    set_action(result);
 }
 //-----------------------------------------------------------------------------
